// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render ExpensesSummary (1 expense) 1`] = `
<div>
  <h1>
    Viewing 
    1
     expense 
    totalling 
    $123.00
  </h1>
</div>
`;

exports[`render ExpensesSummary (3 expenses) 1`] = `
<div>
  <h1>
    Viewing 
    3
     expenses 
    totalling 
    $12,345.00
  </h1>
</div>
`;

exports[`render ExpensesSummary (no expenses) 1`] = `
<div>
  <h1>
    Viewing 
    0
     expenses 
    totalling 
    $0.00
  </h1>
</div>
`;
